[gd_scene load_steps=5 format=2]

[ext_resource path="res://items/Rock/Rock.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/Minerals.png-6caa6668211a6eee8a94bd64214ef106.stex"

[sub_resource type="AtlasTexture" id=5]
atlas = SubResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 13.0

[node name="Rock" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="input_event" from="." to="." method="_on_Rock_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Rock_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Rock_mouse_exited"]
